--- a/tensorboard/docker-compose.yaml
+++ b/tensorboard/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: us.gcr.io/atlas-ce/tensorboard-server:latest
     entrypoint: tensorboard --logdir /logs
     ports:
-      - "6006:6006"
+      - "${TB_SERVER_PORT}:6006"
     volumes:
       - type: bind
         source: .foundations/job_data
@@ -12,12 +12,13 @@ services:
       - type: bind
         source: .foundations/tensorboard/work_dir
         target: /logs
-    build: ./docker/tensorboard_server
-
+    build: ./tensorboard_server
+    environment: 
+      - TB_SERVER_PORT
   tb_api:
     image: us.gcr.io/atlas-ce/tensorboard-rest-api:latest
     ports:
-      - "5001:5001"
+      - "${TB_API_PORT}:5000"
     volumes:
       - type: bind
         source: .foundations/job_data
@@ -29,8 +30,8 @@ services:
       resources:
         limits:
           memory: 300m
-    command: "python /app/tensorboard_rest_api_server.py /archive 5001"
-    build: ./docker/tensorboard_rest_api
-# networks:
-#   default:
-#     name: foundations-atlas-test
+    command: "python /app/tensorboard_rest_api_server.py /archive"
+    environment: 
+      - TB_API_PORT
+      - DEBUG
+    build: ./tensorboard_rest_api
