--- a/tensorboard/docker-compose.yaml
+++ b/tensorboard/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   tb_server:
-    image: us.gcr.io/atlas-ce/tensorboard-server:latest
+    image: ${DOCKER_REGISTRY}/tensorboard-server:latest
     entrypoint: tensorboard --logdir /logs
     ports:
       - "${TB_SERVER_PORT}:6006"
@@ -16,7 +16,7 @@ services:
     environment: 
       - TB_SERVER_PORT
   tb_api:
-    image: us.gcr.io/atlas-ce/tensorboard-rest-api:latest
+    image: ${DOCKER_REGISTRY}/tensorboard-rest-api:latest
     ports:
       - "${TB_API_PORT}:5000"
     volumes:
