[AM] Added dotenv, --install-option deprecated

--- a/tensorboard/tensorboard_rest_api/Dockerfile
+++ b/tensorboard/tensorboard_rest_api/Dockerfile
@@ -7,7 +7,7 @@ RUN mkdir /install
 WORKDIR /install
 RUN pip install --upgrade pip
 COPY requirements.txt requirements.txt
-RUN pip install --install-option="--prefix=/install" -r requirements.txt
+RUN pip install --prefix=/install -r requirements.txt
 
 FROM base
 COPY --from=builder /install /usr/local
