[AM PL] Noticed when trying to use send to tensorboard functionality that set_tensorboard_logdir was no longer being imported, this is likely because it was missed during larger refactor and wasn't seen due to quarantine. Also port forwarded tensorboard api, so the atlas REST API could talk with it

--- a/devenv/docker-compose.yaml
+++ b/devenv/docker-compose.yaml
@@ -76,6 +76,8 @@ services:
         target: /logs
   tb_api:
     image: us.gcr.io/atlas-ce/tensorboard-rest-api:latest
+    ports:
+      - "5001:5000"
     volumes:
       - type: bind
         source: .foundations/job_data
